--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,30 @@
+astroid==2.8.4
 backcall==0.2.0
 ciso8601==2.2.0
 coverage==6.1.1
 decorator==5.1.0
+isort==5.10.1
 jedi==0.18.0
+lazy-object-proxy==1.6.0
 matplotlib-inline==0.1.3
+mccabe==0.6.1
 numpy==1.21.4
 pandas==1.3.4
 parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
+platformdirs==2.4.0
 prompt-toolkit==3.0.22
 ptyprocess==0.7.0
 Pygments==2.10.0
+pylint==2.11.1
 python-dateutil==2.8.2
 pytz==2021.3
 six==1.16.0
 tabulate==0.8.9
+toml==0.10.2
 tqdm==4.62.3
 traitlets==5.1.1
+typing-extensions==3.10.0.2
 wcwidth==0.2.5
+wrapt==1.13.3
